# LaboratoriosOscar

./: README.md
maps/: RRT_A-ros.pgm  RRT_A-ros.yaml  RRT_a-ros2.pgm  RRT_a-ros2.yaml  mapa_a-ros.pgm  mapa_a-ros.yaml
src/reactive_navigation/: package.xml  setup.py
src/reactive_navigation/reactive_navigation/: exploration_node.py  person_follower_node.py  person_seeker_node.py  person_tracker.py  reactive_navigation_node.py  rrt_explorer_node.py
src/robotino_interfaces/: CMakeLists.txt
src/robotino_interfaces/msg/: PersonTracking.msg
src/vision/: setup.py
src/vision/vision/: vision_node_min.py  vision_ptcld_min.py
