<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>reactive_navigation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zuriel.tovar.m@gmail.com">zuriel_tov</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>robotino_webots</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
